fixed the footer, updated the scrollbar, adjusted the footer

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -198,26 +198,13 @@ header #logo-wrapper span{ padding: 6px 0; display: inline-block; margin-right: 
 #content{padding-right: 0; padding-left: 0;}
 .pace{position: absolute;border: 0;}
 /*---- Scroll Bar ----*/
-.mCSB_outside + .mCSB_scrollTools { right: -24px;}
-.mCSB_scrollTools .mCSB_draggerContainer {right: 15px;}
+.mCSB_outside + .mCSB_scrollTools { right: 0;}
+.mCSB_scrollTools .mCSB_draggerContainer {right: -15px;}
 /*---------------------------------Footer----------------------------------*/
 /*------- Footer --------*/
-footer{background: #F2F2F2;min-height: 45px;max-width: 1110px;margin: 0 auto !important;bottom: 0;}
-#footer-content{padding: 0 12px;width: 100%;}
+footer{background: #F2F2F2;min-height: 45px;max-width: 1110px;margin: 0 auto !important;bottom: 0; position: relative;}
 #page-progress{width: 100%;padding: 0;}
-
-/*-- Main Page Progress --*/
-
-.progress{background: #9C9C9C;width: 200px;height: 3px;}
-#page-progress{margin-bottom: 0;}
-#page-progress .progress-bar{background: #1B9ED4;}
-
-/*-- Audio Progress --*/
-
-#audio-wrapper{margin: 4px;}
-
-/*-- Audio Progress --*/
-
+#footer-content{padding: 0 12px;width: 100%;}
 #footer-content #left-block a,#footer-content #right-block a{cursor: pointer;display: inline-block;text-decoration: none;} 
 
 /*-- Left block --*/
@@ -245,6 +232,19 @@ footer{background: #F2F2F2;min-height: 45px;max-width: 1110px;margin: 0 auto !im
 #pagination #page-left-wrapper{padding-right: 8px;}
 #pagination #page-right-wrapper{padding-left: 8px;margin-right:-8px; }
 #pagination #page-counter{font-size: 18px;display: inline-block;background: #e3801b;color: #fff;line-height: 2.4;padding: 1px 10px;}
+
+
+/*-- Main Page Progress --*/
+
+.progress{background: #9C9C9C;width: 200px;height: 3px;}
+#page-progress{margin-bottom: 0;}
+#page-progress .progress-bar{background: #1B9ED4;}
+
+/*-- Audio Progress --*/
+
+#audio-wrapper{margin: 4px;}
+
+/*-- Audio Progress --*/
 
 /*---------------------------------- Media Query ---------------------------------*/
 @media screen and (max-width: 1199px) { 
@@ -341,7 +341,8 @@ footer{background: #F2F2F2;min-height: 45px;max-width: 1110px;margin: 0 auto !im
 
  }
  @media screen and (max-width: 382px) {
-	#footer-content #left-block{width: 131px;}
+	#footer-content #left-block{position: absolute; left: 0; top: 0;}
+	#footer-content #right-block{position: absolute; right: 0; top: 0;}
 	#footer-content #left-block .icon-block {margin-right: 2px;}
 	#footer-content #left-block i::after{margin-left: 5px;}
  }
@@ -353,8 +354,8 @@ footer{background: #F2F2F2;min-height: 45px;max-width: 1110px;margin: 0 auto !im
 
 /*---------------- Footer ---------------*/
 	#footer-content #left-block i{font-size: 17px}
-	#footer-content #left-block{width:127px;}
-	#footer-content #right-block{width:136px; }
+	/* #footer-content #left-block{position: absolute; left: 2%; top: 0;}
+	#footer-content #right-block{position: absolute; right: 2%; top: 0;} */
 	#footer-content #right-block .v-divider{right:147px}
 	#pagination #page-left-wrapper,#pagination #page-right-wrapper{padding: 0;}
 /*---------------- Footer ---------------*/
